--- a/sass/estilo.css
+++ b/sass/estilo.css
@@ -497,7 +497,7 @@ section p {
   border-bottom-left-radius: 5px;
 }
 .ombudsman-section #chatbot-input {
-  width: calc(100% - 70px);
+  width: 100%;
   padding: 12px 15px;
   border: 1px solid #6c757d;
   border-radius: 25px;
