--- a/sass/estilo.scss
+++ b/sass/estilo.scss
@@ -598,7 +598,7 @@ section {
     }
 
     #chatbot-input {
-        width: calc(100% - 70px);
+        width: 100%;
         padding: 12px 15px;
         border: 1px solid $cinza-medio;
         border-radius: 25px;
